deep reduce/reduce conflicts resolution (non optimized)